nova_tests/negative_capability/fail_handler_no_exit_rejected.nv
// EXPECT_COMPILE_ERROR Fail.fail
//
// D61 §1430-1434 (revised by Plan 20 Ф.8): handler-method для эффект-
// операции с return type `never` ОБЯЗАН закончиться через
// `interrupt v`, `throw err`, `panic(...)` или `exit(...)`. Нельзя
// завершить normally — нет значения типа `never` для return.
//
// Этот тест проверяет, что handler без exit-control отвергается
// type-checker'ом.

module negative_capability.fail_handler_no_exit_rejected


test "handler без exit-control должен fail compile" {
    mut x = 0
    with Fail = effect Fail {
        fail(_msg) {
            // ❌ Нет interrupt / throw / panic / exit — body completes
            //    normally. По D61 это compile error.
            x = x + 1
        }
    } {
        throw "boom"
    }
}
